--- a/Programming-Street-150/sprint_2.ipynb
+++ b/Programming-Street-150/sprint_2.ipynb
@@ -54,10 +54,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.083333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Write a program to calculate the sum of the series 1 + 1/2 + 1/3 + ... + 1/n up to the nth term.\n",
+    "\n",
+    "def sum_of_series(n):\n",
+    "    result = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        result += 1/i\n",
+    "    return result\n",
+    "n = 4\n",
+    "print(sum_of_series(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 4), (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4. Write a program to find all pairs of elements in an array whose sum equals a specified target.\n",
+    "\n",
+    "def find_all_pairs(list,target):\n",
+    "    pairs = []\n",
+    "    for i in range(len(list)):\n",
+    "        for j in range(i+1,len(list)):\n",
+    "            if list[i]+list[j] == target:\n",
+    "                    pairs.append((list[i],list[j]))\n",
+    "    return pairs\n",
+    "    \n",
+    "list = [1, 2, 3, 4, 5] \n",
+    "target = 5\n",
+    "print(find_all_pairs(list,target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "*********\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5. Write a program to create a diamond pattern with stars of a given size.\n",
+    "\n",
+    "def print_diamond(size):\n",
+    "    for i in range(size):\n",
+    "        print(' '*(size-i-1),end='')\n",
+    "        print('*'*(2*i+1))\n",
+    "    for i in range(size-2,-1,-1):\n",
+    "        print(' ' * (size - i - 1), end='')\n",
+    "        print('*' * (2 * i + 1))\n",
+    "size = 5\n",
+    "print_diamond(size)\n",
+    "\n",
+    "         "
+   ]
   }
  ],
  "metadata": {
