--- a/Programming-Street-150/sprint_2.ipynb
+++ b/Programming-Street-150/sprint_2.ipynb
@@ -142,6 +142,69 @@
     "\n",
     "         "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6. Write a program to count how many palindromic substrings exist in a given string.\n",
+    "\n",
+    "def countPalindromicSubstrings(s):\n",
+    "    \n",
+    "    def expandAroundCenter(left,right):\n",
+    "        count = 0\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            count += 1\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "        return count\n",
+    "    total_palindrome = 0\n",
+    "    for i in range(len(s)):\n",
+    "        total_palindrome += expandAroundCenter(i,i)\n",
+    "        total_palindrome += expandAroundCenter(i,i+1)\n",
+    "\n",
+    "    return total_palindrome\n",
+    "string = 'aaa'\n",
+    "print(countPalindromicSubstrings(string))                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[2, 4, 6]\n",
+      "[3, 6, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7. Write a program to generate a matrix where each element at position (i, j) is the product of i and j.\n",
+    "\n",
+    "def gen_matrix(size):\n",
+    "    \n",
+    "    matrix = [[i*j for j in range(1,size+1)] for i in range(1,size+1)]\n",
+    "    return matrix\n",
+    "size = 3\n",
+    "matrix = gen_matrix(size)\n",
+    "for row in matrix:\n",
+    "    print(row)\n"
+   ]
   }
  ],
  "metadata": {
